added new api for store/products and added customer frontend

--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -41,7 +41,7 @@
          if(xhr.status&&xhr.status==200)
          {
          
-          var url = "dashboard.html?uid=" + data.uid+"&uname="+data.firstname+"_"+data.lastname;
+          var url = "index.html?uid=" + data.uid+"&uname="+data.firstname+"_"+data.lastname;
           $(location).attr('href',url);
          }
       })
