new apis added for orders and front end for store manager improved

--- a/src/main/webapp/addproducts.html
+++ b/src/main/webapp/addproducts.html
@@ -215,10 +215,13 @@
           <!-- Page Heading -->
           <h1 class="h3 mb-4 text-gray-800">Add Products to stores</h1>
           <br>
-          <label>Select a particular store: </label>
-          <select id="storelist">
-              <option value="-1">-----</option>
+            <div class="row">
+                <div class="col-lg-4">
+          <select id="storelist" class="form-control">
+              <option value="-1">Select a Store</option>
           </select>
+                </div>
+            </div>
           <hr/>
           <form id='form'  >
           <div class="card-body">
