--- a/src/main/webapp/addnewproducts.html
+++ b/src/main/webapp/addnewproducts.html
@@ -210,17 +210,21 @@ input:checked + .slider:before {
           <!-- Page Heading -->
           <h1 class="h3 mb-4 text-gray-800">Add New Products to stores</h1>
           <br>
-          <label>Select a particular store: </label>
-          <select id="storelist">
-              <option value="-1">-----</option>
+            <div class="row">
+                <div class="col-lg-4">
+
+          <select id="storelist" class="form-control">
+              <option value="-1">Select a Store</option>
           </select>
+                </div>
+            </div>
           <hr/>
           <form id='form'  >
           <div class="card-body">
             <div class="table-responsive">
               <table class="table table-bordered" id="producttable" width="100%" cellspacing="0">
                <thead>
-                <th>Product Name</th><th>Product Price</th><th>Discounted Price</th><th>Quantity</th>
+                <th >Product Name</th><th>Product Price</th><th>Discounted Price</th><th>Quantity</th>
                </thead>
                 <tbody id="tablebody">
 
@@ -293,7 +297,15 @@ input:checked + .slider:before {
       </div>
     </div>
   </div>
+  <!-- Bootstrap core JavaScript-->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
+  <!-- Core plugin JavaScript-->
+  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
+  <!-- Custom scripts for all pages-->
+  <script src="js/sb-admin-2.min.js"></script>
  
 
 </body>
