final commit after integrating customer

--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -40,9 +40,9 @@
         
          if(xhr.status&&xhr.status==200)
          {
-         
-          var url = "index.html?uid=" + data.uid+"&uname="+data.firstname+"_"+data.lastname;
-          $(location).attr('href',url);
+
+          var url = "index.html?cid="+data;
+           $(location).attr('href',url);
          }
       })
       .fail(function(xhr, errorType, exception){
