--- a/src/main/webapp/stores.html
+++ b/src/main/webapp/stores.html
@@ -43,16 +43,16 @@
 		
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Local Market Place</a>
+	      <div class="navbar-brand">Local Market Place</div>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-	           <li class="nav-item cta cta-colored"><a href="cart.html" class="nav-link"><span class="icon-shopping_cart"></span></a></li>
+	          <li class="nav-item"><button name='home' class="mylink nav-link">Home</button></li>
+
+			  <li class="nav-item"><button name='logout' class="mylink nav-link">Logout</button></li>
 
 	        </ul>
 	      </div>
@@ -60,11 +60,11 @@
 	  </nav>
     <!-- END nav -->
 
-    <div class="hero-wrap hero-bread" style="background-image: url('/assets/img/main.jpg');">
+    <div class="hero-wrap hero-bread" style="background-image: url(/assets/img/main.jpg);">
       <div class="container">
         <div class="row no-gutters slider-text align-items-center justify-content-center">
           <div class="col-md-9 ftco-animate text-center">
-          	<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home</a></span> <span>Stores</span></p>
+          	<p class="breadcrumbs"><span class="mr-2">Home</span> <span>Stores</span></p>
             <h1 class="mb-0 bread">Stores</h1>
           </div>
         </div>
@@ -135,6 +135,7 @@
   <script src="js/main.js"></script>
 
   <script src="js/storeslist.js"></script>
+  <script src="js/header.js"></script>
     
   </body>
 </html>
